--- a/examples/oauth2/views/layout.ejs
+++ b/examples/oauth2/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Passport-Google (OAuth 2.0) Example</title>
+		<title>Passport-AOL (OAuth 2.0) Example</title>
 	</head>
 	<body>
 		<% if (!user) { %>
